Bug 61940 - : Unable to Change Shape Fill Colors
Summary: : Unable to Change Shape Fill Colors
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha0+ Master
Hardware: Other All
: high normal
Assignee: Caolán McNamara
URL:
Whiteboard: BSA target:4.1.0
Keywords: regression
: 62123 (view as bug list)
Depends on:
Blocks: 60207 mab4.1
  Show dependency treegraph
 
Reported: 2013-03-07 06:15 UTC by Joel Madero
Modified: 2013-04-07 11:14 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joel Madero 2013-03-07 06:15:52 UTC
Problem description: 
Version 4.1.0.0.alpha0+ (Build ID: 2bb13b83e40aec362964d26921a3fc1660a5da2)
Pull Date:   Thu Feb 28 20:17:25 2013 +0100
Bodhi Linux 2.2 X64

I am unable to change the fill color of any object in Drawing component. Works fine running 4.0.0.3 release

Steps to reproduce:
1. Open up drawing
2. Insert any shape (example smiley face or rectangle)
3. Right click and select "Fill Area"
4. Select a different color


Current behavior: Color doesn't change

Expected behavior: Color should change to selected color

More info: If you go back into fill color for the shape you can see that it has reverted back to original color

              
Operating System: All
Version: 4.1.0.0.alpha0+ Master
Last worked in: 4.0.0.3 release
Comment 1 Joel Madero 2013-03-07 06:17:06 UTC
Joren - can you confirm this? 

Marked as Normal - High

Prevents high quality work, regression so bumped it up to high
Comment 2 Jorendc 2013-03-07 19:20:30 UTC
Nice catch Joel!

I can confirm this using Linux Mint 14 x64 with Version 4.1.0.0.alpha0+ (Build ID: 885ddc8a03069e68f192ba32c3956b01608b209) Date: Wed Mar 6 23:34:03 2013 +0100

Therefore I mark this as NEW. Agreed with Joel's priority.
Comment 3 Joel Madero 2013-03-18 16:42:14 UTC
*** Bug 62123 has been marked as a duplicate of this bug. ***
Comment 4 Joel Madero 2013-03-18 16:42:37 UTC
Changing to LibreOffice as all components are affected
Comment 5 Joel Madero 2013-03-18 16:46:57 UTC
@Michael - this one is particularly annoying as "fill" just is useless now, any clue about what's going on? Also I'll try to find someone to look at 4.0.2, this IMO would be a blocker if it is as it's such a normal feature and would reflect quite bad on us if it snuck through.
Comment 6 Michael Meeks 2013-03-18 20:37:24 UTC
Sure - make it a 4.1 MAB then :-) thanks !
Comment 7 Cor Nouws 2013-03-19 10:44:14 UTC
I expect there will be some deeper problem.
It always hit me that when I first choose a color and then set transparency, I had to go back once to the color, or open/close the window and do it again.
Anyway, something wierd.

Looks as if the following works for me in 402rc1 too:
- choose color
- change to tab Transparency
- change to tab Color
- OK.
Comment 8 Commit Notification 2013-04-05 12:35:09 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dac06a943a6c44befda1ba22f4bd19c0281601d0

Resolves: fdo#61940 unable to change shape fill colors



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Stephan van den Akker 2013-04-06 17:42:20 UTC
Just tested in:

Version: 4.1.0.0.alpha0+
Build ID: 758e01938c4e24e965f52afcd2e3ae378c4919a

Fixed indeed. Thanks Caolan!
Comment 10 Jorendc 2013-04-07 11:14:26 UTC
(In reply to comment #9)
> Just tested in:
> 
> Version: 4.1.0.0.alpha0+
> Build ID: 758e01938c4e24e965f52afcd2e3ae378c4919a
> 
> Fixed indeed. Thanks Caolan!

Therefore it is VERIFIED FIXED. Thanks Caolan for fixing, and Stephan for confirming it is fixed.